--- a/index.html
+++ b/index.html
@@ -1,109 +1,111 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Page Title</title>
+        <title>Akintola Oluwafemi CV</title>
         <link rel = "stylesheet"
             link = "text/css"
-            href = "cv.css">
+            href = "cv1.css">
+        <script src="cv.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div id="container">
-
-    <!-- Creating a table frame for the CV-->
-        <table id="table">
-            <tr  id = "header">
-                <td width = '25%' ></td>
-                <td colspan = '2' align = 'center'>
-                    <h1 id = "myName"> I'm Akintola Oluwafemi</h1><hr>
-                    <h3 id = "skil">Personnal Profile</h3> <hr>
-                </td>
-                <td width = '25%'></td>
-            </tr>
-
-            <!-- Paragrah on about me-->
-            <tr >
-                <td></td>
-                <div >
-                <td id="aboutme1">
-                    <h3 id = "skil">About me</h3><hr>
-                    <div  id = "aboutMe">
-                    <p align = "left"><b>Address:</b> 110, Oyedeji Street, Suru Alaba, Lagos</br>
-                        <b>email:</b> fas3a4real@gmail.com</br>
-                        <b>State of Orign:</b> Oyo State</br>
-                        <b>Date of Birth:</b> 11 June</br>
-                        <b>Sex:</b> Male</br>
-                    </p>
-                    <p>I am a young man with great passion and aspirations, independent and highly motivated with a good work 
-                        attitude and ethic. I can work independently or as a part of a team, always having the desire to be the 
-                        team lead. Through site and work experiences, I have been able to gain organizational, administrative, 
-                        design and construction skills.</p>
-                    </div>
-                </td>
-                <td  id = "aboutMe" align = 'auto'><img src = 'https://res.cloudinary.com/fas3a/image/upload/v1567403536/faspics2_iiwxyl.jpg' alt = 'Femi Photograhy' id="cvpics"></br></td>
+            <div id="title">
+                <a href="https://internship.zuri.team/"><img id="logo" src="Logo.jpeg" alt="logo"></img></a>
+                <p>I'm AKINTOLA OLUWAFEMI</p>
+                <h3> Personal Profile</h3>
+                <div class="info">
+                    <ul>
+                        <li><b>Email:</b>  oakintola3@gmail.com</li>
+                        <li><b>Phone No: </b>07063086104</li>
+                        <li><b>State of Origin:</b> Oyo</li>
+                    </ul>
                 </div>
-                <td ></td>
-            </tr>
+            </div>
 
-            <!-- My Skills and Hobbies -->
-            <tr  align = 'center'>
-                <td></td>
-                <div id="hobbies">
-                <td><h3 id = "skil" >Skills</h3><hr></td>
-                <td><h3 id = "skil" >Hobbies</h3><hr></td>
+            <div class="main">
+                <div class="academic">
+                    <h3>Academic Qualification</h3>
+                    <ul>
+                        <li>National Youth Service Corps (NYSC) Certificate            | 2017</li> 
+                        <li>B-Eng. Civil Engineering; (First Class) University of Ilorin   |2011 - 2016</li>
+                        <li>Union Baptist Grammar School, Ilorin                                |2004 – 2010</li>
+                        <li>Saint Joseph Nursery and Primary School, Ilorin               |2003 - 2004</li>
+                        <li>Nativity Private Nursery and Primary School                     |1995 - 2002</li> 
+                    </ul>
                 </div>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td >
+                <div class="academic">
+                    <h3>Training and Certifications</h3>
                     <ul>
-                        <li>Front End developer (HTML & CSS)</li>
-                        <li>Microsoft Packages</li>
-                        <li>Photoshop</li>
+                        <li>Front End and Back End Languages</li>
+                        <li>Fundament of Project Managment</li>
+                        <li>Primaveral P6</li>
                     </ul>
-                </td>
-                <td>
+                </div>
+                <div class="academic">
+                    <h3>Awards and Certifications</h3>
                     <ul>
-                        <li>Swimming</li>
-                        <li>Watching Movies</li>
-                        <li>Chatting</li>
+                        <li>General Secretary of Nigeria Christians Corpers Fellowship | 2017</li>
+                        <li>Class Representative for the Department of Civil Engineering, University of Ilorin(5 years) | 2011-2016</li>
+                        <li>Member of the student Representative Council, Faculty of Engineering and Technology, University of Ilorin | 2013</li>
+                        <li>Youth President of the Bible Baptist Church, Tanke, Ilorin, Kwara State</li>
                     </ul>
-                </td>
-                <td></td>
-            </tr>
-            
-            <!-- My Working Experiences -->
-            <tr>
-                <td width = '25%'></td>
-                <td colspan = '2'>
-                    <h3 id = "skil">Work Experiences</h3><hr>
-                    <h4><b>Company:</b> HNG Intership</h4>
-                    <ul>
-                        <li>Wrting of HTML and CSS</li>
-                        <li>Developing a resposive website using Javascript</li>
-                        <li>Website Tester</li>
-                    </ul>
-                    <h4><b>Company:</b> Ariosh Ltd</h4>
-                    <ul>
-                        <li>Ensuring clear and correct understanding of the Client’s (IOC & NOC) requirements from bid/ITT documents</li>
-                        <li>Carry out preparation of proposal documents on response to ITTs for Ariosh’s Client (IOC & NOC) Organizations</li>
-                        <li>Adopt strategy for proposal preparation as stated by Proposal Coordinator/Lead Proposal Engineer</li>
-                        <li>Attend pre-qualification/bid clarification meetings</li>
-                        <li>Liase with internal departments to ensure that all relevant input received is compliant with ITT requirements</li>
-                        <li>Carry out all administrative duties related to filing / developments / issue of proposals to client</li>
-                        <li>Assist in administration of the initial stage of project prior to full formal handover of project to operations personnel</li>
-                    </ul>
+                </div>
 
-                    <h3 id = "skil" >Referee</h3><hr>
-                    <p>Shall be provided on request</p><hr>
-                    <h6 align = "center"> For More Details:<h6>
-                    <h6 align = "center"> <img src="Logo.jpeg" alt="HNG Logo" id="logo"><br><a href="https://internship.zuri.team/">Zuri Internship Website</a><h6>
+                <div id="clr"></div>
 
-                </td>
-                <td width = '25%'></td>
-            </tr>
-        </table>
-    </div>
+            <div id="experience">
+                <h3>Work Experience</h3>
+                <h4><b>Company:</b> Ariosh Ltd (2017 - Date) </h4>
+                <ul>
+                    <li>Ensuring clear and correct understanding of the Client’s (IOC & NOC) requirements from bid/ITT documents</li>
+                    <li>Carry out preparation of proposal documents on response to ITTs for Ariosh’s Client (IOC & NOC) Organizations</li>
+                    <li>Adopt strategy for proposal preparation as stated by Proposal Coordinator/Lead Proposal Engineer</li>
+                    <li>Attend pre-qualification/bid clarification meetings</li>
+                    <li>Liase with internal departments to ensure that all relevant input received is compliant with ITT requirements</li>
+                    <li>Carry out all administrative duties related to filing / developments / issue of proposals to client</li>
+                    <li>Assist in administration of the initial stage of project prior to full formal handover of project to operations personnel</li>
+                </ul> <hr>
+                <h4><b>Company:</b> Index Eng and Consult (2014 - 2015)</h4>
+                <ul>
+                    <li>Survey of roads, Arial survey and quantity survey.</li>
+                    <li>Design and drafting of Structures (concrete and Steel),</li> 
+                    <li>Design of road pavements</li>
+                    <li>Installations of speed breakers, kerbs etc.</li>
+                    <li>General supervision of structures, supervision of installations of speed breakers</li>
+                </ul>
+            </div>
+
+                <div id="clr"></div>
+            </div>
+            <div id="footer">
+                <p> For more details about me pls <button class="open-button" onclick="openForm()">Contact Me</button></p>
+                <a href="https://internship.zuri.team/" target="_blank">For details of this intership, Please click here. </a>
+            </div>
+        </div>
+
+        <!-- Contact Form-->
+        <div class="form-popup" id="myForm">
+            <form class="form-container" method="POST"  >
+              <h1>Contact Me</h1>
+
+              <label for="name"><b>Name</b></label>
+              <input type="text" placeholder="Enter Name" name="name" minlength="4" title="Must contain 4digit" required>
+          
+              <label for="email"><b>Email</b></label>
+              <input type="email" placeholder="Enter Email" name="email" id="email" required>
+
+              <label for="Title"><b>Title</b></label>
+              <input type="text" placeholder="Enter Title" name="Title" required>
+
+              <label for="msg"><b>Message</b></label>
+              <textarea placeholder="Enter Message" name="msg" minlength="20" required></textarea>
+
+              <button type="submit" class="btn" value="submit"  onclick="suBmit()">Send</button>
+              <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
+            </form>
+          </div>
+
     </body>
 </html>
+
