--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
 
             <div id="experience">
                 <h3>Work Experience</h3>
+                <h4><b>Company:</b> HNG Intership</h4>
+                <ul>
+                    <li>Wrting of HTML and CSS</li>
+                    <li>Developing a resposive website using Javascript</li> 
+                    <li>Website Tester</li>
+                </ul>
                 <h4><b>Company:</b> Ariosh Ltd (2017 - Date) </h4>
                 <ul>
                     <li>Ensuring clear and correct understanding of the Client’s (IOC & NOC) requirements from bid/ITT documents</li>
@@ -66,14 +72,7 @@
                     <li>Carry out all administrative duties related to filing / developments / issue of proposals to client</li>
                     <li>Assist in administration of the initial stage of project prior to full formal handover of project to operations personnel</li>
                 </ul> <hr>
-                <h4><b>Company:</b> Index Eng and Consult (2014 - 2015)</h4>
-                <ul>
-                    <li>Survey of roads, Arial survey and quantity survey.</li>
-                    <li>Design and drafting of Structures (concrete and Steel),</li> 
-                    <li>Design of road pavements</li>
-                    <li>Installations of speed breakers, kerbs etc.</li>
-                    <li>General supervision of structures, supervision of installations of speed breakers</li>
-                </ul>
+
             </div>
 
                 <div id="clr"></div>
