Stage 2 (NO 2 Question)

--- a/myname.html
+++ b/myname.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="myname.css">
     <title>Document</title>
 </head>
 <body>
+    <div align="center">
     <h3 align= "center">My name is:</h3>
     <h1 style="text-align:center">AKintola Oluwafemi</h1>
+
+    <button onclick="myName()" id="button">Click here to show my name</button>
+    <h1 id="myname1" align="center"></h1>
+</div>
+
+<script src="myname.js"></script>
 </body>
 </html>
