--- a/index.html
+++ b/index.html
@@ -1,110 +1,106 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Akintola Oluwafemi CV</title>
-        <link rel = "stylesheet"
-            link = "text/css"
-            href = "cv1.css">
-        <script src="cv.js"></script>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div id="container">
-            <div id="title">
-                <a href="https://internship.zuri.team/"><img id="logo" src="Logo.jpeg" alt="logo"></img></a>
-                <p>I'm AKINTOLA OLUWAFEMI</p>
-                <h3> Personal Profile</h3>
-                <div class="info">
-                    <ul>
-                        <li><b>Email:</b>  oakintola3@gmail.com</li>
-                        <li><b>Phone No: </b>07063086104</li>
-                        <li><b>State of Origin:</b> Oyo</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="main">
-                <div class="academic">
-                    <h3>Academic Qualification</h3>
-                    <ul>
-                        <li>National Youth Service Corps (NYSC) Certificate            | 2017</li> 
-                        <li>B-Eng. Civil Engineering; (First Class) University of Ilorin   |2011 - 2016</li>
-                        <li>Union Baptist Grammar School, Ilorin                                |2004 – 2010</li>
-                        <li>Saint Joseph Nursery and Primary School, Ilorin               |2003 - 2004</li>
-                        <li>Nativity Private Nursery and Primary School                     |1995 - 2002</li> 
-                    </ul>
-                </div>
-                <div class="academic">
-                    <h3>Training and Certifications</h3>
-                    <ul>
-                        <li>Front End and Back End Languages</li>
-                        <li>Fundament of Project Managment</li>
-                        <li>Primaveral P6</li>
-                    </ul>
-                </div>
-                <div class="academic">
-                    <h3>Awards and Certifications</h3>
-                    <ul>
-                        <li>General Secretary of Nigeria Christians Corpers Fellowship | 2017</li>
-                        <li>Class Representative for the Department of Civil Engineering, University of Ilorin(5 years) | 2011-2016</li>
-                        <li>Member of the student Representative Council, Faculty of Engineering and Technology, University of Ilorin | 2013</li>
-                        <li>Youth President of the Bible Baptist Church, Tanke, Ilorin, Kwara State</li>
-                    </ul>
-                </div>
-
-                <div id="clr"></div>
-
-            <div id="experience">
-                <h3>Work Experience</h3>
-                <h4><b>Company:</b> HNG Intership</h4>
-                <ul>
-                    <li>Wrting of HTML and CSS</li>
-                    <li>Developing a resposive website using Javascript</li> 
-                    <li>Website Tester</li>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="cv2.css">
+    <title>Fas3a CV</title>
+</head>
+<body>
+    <div id="container">
+        <div>
+            <header>
+                <ul id="headnav">
+                    <li><a href="#container">Home</a></li>
+                    <li><a href="#aboutme">About Me</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#hobbies">Hobbies</a></li>
+                    <li><a href="#experience-container">Experience</a></li>
+                    <li><a href="#">Portfolio</a></li>
                 </ul>
-                <h4><b>Company:</b> Ariosh Ltd (2017 - Date) </h4>
-                <ul>
-                    <li>Ensuring clear and correct understanding of the Client’s (IOC & NOC) requirements from bid/ITT documents</li>
-                    <li>Carry out preparation of proposal documents on response to ITTs for Ariosh’s Client (IOC & NOC) Organizations</li>
-                    <li>Adopt strategy for proposal preparation as stated by Proposal Coordinator/Lead Proposal Engineer</li>
-                    <li>Attend pre-qualification/bid clarification meetings</li>
-                    <li>Liase with internal departments to ensure that all relevant input received is compliant with ITT requirements</li>
-                    <li>Carry out all administrative duties related to filing / developments / issue of proposals to client</li>
-                    <li>Assist in administration of the initial stage of project prior to full formal handover of project to operations personnel</li>
-                </ul> <hr>
-
-            </div>
-
-                <div id="clr"></div>
-            </div>
-            <div id="footer">
-                <p> For more details about me pls <button class="open-button" onclick="openForm()">Contact Me</button></p>
-                <a href="https://internship.zuri.team/" target="_blank">For details of this intership, Please click here. </a>
-            </div>
+                <div id="summary-div">
+                    <div id="greet">Hello There...</div>
+                    <div id="summary">I am Oluwafemi Akintola, I am a forntend developer based in Ogun State</div>
+                </div>
+                <div id="side-head">
+                    <a href="#">LATEST PROJECTS</a>
+                    <a href="#">LATEST PROJECTS</a>
+                </div>  
+                <a href="#" id="scroldwn">SCROLL DOWN</a>
+            </header>
         </div>
 
-        <!-- Contact Form-->
-        <div class="form-popup" id="myForm">
-            <form class="form-container" method="POST"  >
-              <h1>Contact Me</h1>
+        <!-- About me -->
+        <div id="aboutme">
+            <div id="aboutme-write">
+                <span>More About Me</span>
+                <p>I am a vibrant and dynamic young man, a first-class graduate in engineering, having the ability to learn quickly and deliver job under pressure, budget and on time. I have years of experience in responding to technical and commercial bids/proposals as a team and as an individual. 
+                        A business development skill in building, maintaining, interfacing with clients, vendors, subcontractors & OEMs.
+                        </p>
+            </div>
 
-              <label for="name"><b>Name</b></label>
-              <input type="text" placeholder="Enter Name" name="name" minlength="4" title="Must contain 4digit" required>
-          
-              <label for="email"><b>Email</b></label>
-              <input type="email" placeholder="Enter Email" name="email" id="email" required>
+            <div id="mid-content">
+                <div id="skills">
+                    <span id="skills-header">Skills</span>
+                    <ul>
+                        <li>Communication</li>
+                        <li>Listening</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Javascript</li>
+                    </ul>
 
-              <label for="Title"><b>Title</b></label>
-              <input type="text" placeholder="Enter Title" name="Title" required>
+                </div>
+                <div id="hobbies">
+                    <span id="hobbies-header">Hobbies</span>
+                    <ul>
+                        <li>Swiming</li>
+                        <li>Making Friends</li>
+                        <li>Gaming</li>
+                        <li>Chatting</li>
+                        <li>Dancing</li>
+                    </ul>
+                </div>
+            </div>
+            <br><br><hr>
 
-              <label for="msg"><b>Message</b></label>
-              <textarea placeholder="Enter Message" name="msg" minlength="20" required></textarea>
+            <!-- experience -->
+            <div id="experience-container">
+                <span id="experience-title">My Work Experience</span>
+                <div id="experience">
+                    <div id="job1">
+                        <div id="date1">AUGUST 2021 - PRESENT</div>
+                        <span id="comp1">HNG Internship</span><br>
+                        <span id="role1">Front End Developer</span>
+                        <ul>
+                            <li>Desinging of Web using HTML</li>
+                            <li>Desinging of Web using CSS</li>
+                            <li>Desinging of Web using JS</li>
+                            <li>Software Tester</li>
+                        </ul>
+                    </div>
+                    <div id="job2">
+                        <div id="date1">FEBURARY 2017 - PRESENT</div>
+                        <span id="comp1">Ariosh Ltd</span><br>
+                        <span id="role1">Lead Proposal Engineer</span>
+                        <ul>
+                            <li>Coordinate the tender development process, preparation and submission of offers to the clients;</li>
+                            <li>Review and identify ITT requirements, issue responsibility matrix, prioritize tasks and coordinate preparation of ITT responses within the set time limits;</li>
+                            <li>Prepare technical and commercial proposals consistent with company and client’s requirements</li>
+                            <li>Review tender response content and monitor quality of writing for accuracy and compliance.</li>
+                        </ul>
 
-              <button type="submit" class="btn" value="submit"  onclick="suBmit()">Send</button>
-              <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
-            </form>
-          </div>
+                    </div>
+                </div>
+            </div>
+        </div><!-- End of About Me-->
+        <div id="footer">
+            <img src="Logo.jpeg"></img>
+            <p> Copyright by Fas3a (2021)</p>
+        </div>
 
-    </body>
+    </div>
+    
+</body>
 </html>
-
